Quick Fix - 0.2.6
- Fixed message overflowing the viewport on mobile

--- a/styles.css
+++ b/styles.css
@@ -3488,7 +3488,7 @@ nav button i{
 }
 
 .noStorageMessage div{
-    width: 400px;
+    width: 90vw;
     font-size: 25px;
     text-shadow: 0px 0px 30px black;
 }
